# wire

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  emojis.json  example.env  pyproject.toml
lavalink/: README.md
src/: __main__.py  client.py  context.py  misc.py
src/extensions/: admin.py  music.py
